--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+    <h2>Welcome to Dev Match</h2>
+    <h3>A membership site where entrepreneurs can meet developers.</h3>
+</div>
